--- a/app/src/main/res/layout/activity_movie_search.xml
+++ b/app/src/main/res/layout/activity_movie_search.xml
@@ -33,7 +33,7 @@
             android:drawableStart="@drawable/ic_search"
             android:drawablePadding="10dp"
             android:drawableTint="@color/black"
-            android:hint="Search Movie Name"
+            android:hint="Search Movie/Show Name"
             android:inputType="textAutoCorrect" />
 
         <Button
